# arxiv-tex-extract

./: .gitignore  Cargo.toml  README.md  test_parallelism.sh
benches/: throughput.rs
benches/fixtures/: large_paper.tex  medium_paper.tex  small_paper.tex
src/: admission.rs  archive.rs  braces.rs  checkpoint.rs  cleanup.rs  comments.rs  diacritics.rs  environments.rs  formatting.rs  input_resolve.rs  lib.rs  macros.rs  main.rs  memory.rs  metrics.rs  output.rs  pipeline.rs  preamble.rs  references.rs  result.rs  structure.rs  symbols.rs  timing.rs
tests/: integration.rs  test_admission.rs  test_cancel.rs  test_jemalloc_purge.rs
