[package]
name = "latex-extract"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1"
aho-corasick = "1"
unicode-normalization = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
flate2 = "1"
rayon = "1"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
encoding_rs = "0.8"
arrow = { version = "54", default-features = false, features = ["prettyprint"] }
parquet = { version = "54", default-features = false, features = ["arrow", "zstd"] }

[features]
# Compile in test-only hooks (notably ARXIV_TEX_EXTRACT_KILL_AFTER_PAPERS,
# used by the kill+resume integration tests). Off in release builds so no
# exit(137) surprise ships to users. Enable with
# `cargo test --features test-hooks` or `cargo build --features test-hooks`.
test-hooks = []

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "throughput"
harness = false

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6", features = ["stats"] }
tikv-jemalloc-ctl = { version = "0.6", features = ["stats"] }
